# Moodle-MCP

./: .gitignore  PLAN.md  README.md  TODOS.md  pyproject.toml
moodle_mcp/: __init__.py  __main__.py  auth.py  cache.py  classify.py  client.py  config.py  server.py  taxonomy.yaml
tests/: test_cache.py  test_classify.py  test_client.py  test_server.py
