[project]
name = "moodle-mcp"
version = "0.1.0"
description = "MCP server that pulls ETH Moodle course content for exam study"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "pypdf>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
extract = ["python-docx>=1.1", "python-pptx>=0.6"]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
moodle-mcp = "moodle_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["moodle_mcp"]

[tool.setuptools.package-data]
moodle_mcp = ["taxonomy.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
